# title-parser

./: .gitignore  README.md  data.csv  experiment.ipynb  pyproject.toml
title_parser/: __init__.py
