[tool.poetry]
name = "title-parser"
version = "0.1.0"
description = "Parse titles for Khristian's article"
authors = ["José Ribeiro <ribeirojose@me.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.4"

[tool.poetry.dev-dependencies]
ipython = "^7.15.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
